Update Jenkinsfile with region information

--- a/terraform-for-cluster/Jenkinsfile
+++ b/terraform-for-cluster/Jenkinsfile
@@ -3,13 +3,13 @@ pipeline {
     environment {
         AWS_ACCESS_KEY_ID = credentials('AWS_ACCESS_KEY_ID')
         AWS_SECRET_ACCESS_KEY = credentials('AWS_SECRET_ACCESS_KEY')
-        AWS_DEFAULT_REGION = "us-east-1"
+        AWS_DEFAULT_REGION = "ap-south-1"
     }
     stages {
         stage("Create an EKS Cluster") {
             steps {
                 script {
-                    dir('part2-cluster-from-terraform-and-jenkins/terraform-for-cluster') {
+                    dir('terraform-for-cluster') {
                         sh "terraform init"
                         sh "terraform apply -auto-approve"
                     }
@@ -19,8 +19,8 @@ pipeline {
         stage("Deploy to EKS") {
             steps {
                 script {
-                    dir('part2-cluster-from-terraform-and-jenkins/kubernetes') {
-                        sh "aws eks update-kubeconfig --name myjenkins-server-eks-cluster --region us-east-1"
+                    dir('kubernetes') {
+                        sh "aws eks update-kubeconfig --name myjenkins-server-eks-cluster --region ap-south-1"
                         sh "kubectl apply -f deployment.yaml"
                         sh "kubectl apply -f service.yaml"
                     }
